trying to fix UI on mobile

--- a/app.css
+++ b/app.css
@@ -52,7 +52,7 @@
   }
   .player-section {
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 10px;
   }
   .lineup .col-xs-1 {
     padding-left: 0px;
@@ -76,7 +76,7 @@
   }
   .player-section {
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 10px;
   }
   .lineup .col-xs-1 {
     padding-left: 0px;
